crates/forge/tests/e2e/snapshots/backtrace/main__e2e__backtrace__snap_test_backtrace_test_level_missing_env@2.19.5.snap
---
source: crates/forge/tests/e2e/backtrace.rs
expression: stdout
---


[FAIL] backtrace_test_panic::tests::test_panics_in_test_body

Failure data:
    0x417373657274206661696c6564 ('Assert failed')

note: run with `SNFORGE_BACKTRACE=1` environment variable to display a backtrace


Failures:
    backtrace_test_panic::tests::test_panics_in_test_body
